--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-  <p>Copyright {{getCurrentYear}} by Anshul Goyal</p>
+  <p><i>Copyright {{getCurrentYear}} by Anshul Goyal</i></p>
 </footer>
